syntax = "proto3";

package envoy.extensions.filters.http.waf.v3;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "udpa/annotations/status.proto";
import "udpa/annotations/versioning.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.filters.http.waf.v3";
option java_outer_classname = "WafProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

message WAFCategoryGeneric {
}

message WAFCategoryOSCI {
}

message WAFCategoryXSS {
  enum XSSSubcategory { TAG_INSERTION = 0; }

  XSSSubcategory subcategory = 1;
}

message WAFCategorySQLI {
  enum SQLISubcategory {
    BUILTIN_FUNCTION_INVOCATION = 0;
    ESCAPE_CHARACTER = 1;
    STATEMENT = 2;
    STATEMENT_INJECTION = 3;
  }

  SQLISubcategory subcategory = 1;
}

message WAFCategory {
  oneof category {
    option (validate.required) = true;

    WAFCategoryGeneric generic = 1;

    WAFCategoryOSCI osci = 2;

    WAFCategoryXSS xss = 3;

    WAFCategorySQLI sqli = 4;
  }
}

// [#next-free-field: 8]
message WAFSignature {
  uint32 id = 1;

  string name = 2;

  string msg = 3;

  string operand = 4;

  int32 severity = 5;

  int32 certainity = 6;

  WAFCategory category = 7;
}

message WAFRuleEntryMatchMap {
  enum Field {
    args = 0;
    cookies = 1;
    headers = 2;
  }

  Field field = 1;

  string key = 2;
}

message WAFRuleEntryMatchValue {
  enum Field {
    path = 0;
    query = 1;
    uri = 2;
    country = 3;
    method = 4;
    asn = 5;
    ip = 6;
  }

  Field field = 1;
}

message WAFRuleEntry {
  string description = 1;

  oneof entry {
    option (validate.required) = true;

    WAFRuleEntryMatchValue value = 2;

    WAFRuleEntryMatchMap map = 3;
  }

  string pattern = 4;
}

message WAFRuleSection {
  enum Relation {
    OR = 0;
    AND = 1;
  }

  Relation relation = 1;

  repeated WAFRuleEntry entries = 2;
}

message WAFRule {
  enum Relation {
    OR = 0;
    AND = 1;
  }

  Relation relation = 1;

  repeated WAFRuleSection sections = 2;
}

// [#next-free-field: 9]
message WAFTagRule {
  string id = 1;

  string name = 2;

  string source = 3;

  google.protobuf.Timestamp mdate = 4;

  string notes = 5;

  bool active = 6;

  repeated string tags = 7 [(validate.rules).repeated = {min_items: 1}];

  WAFRule rule = 8 [(validate.rules).message = {required: true}];
}

message WAF {
  repeated WAFSignature signatures = 1;

  repeated WAFTagRule tagrules = 2;
}

message WAFPerRoute {
  uint32 xff_trusted_hops = 1 [(validate.rules).uint32 = {gte: 1}];
}
